# week-ahead

./: README.md  pyproject.toml
src/week_ahead/: Week Ahead_template.md  week_ahead.py
